# scls-optimisation

./: .gitmodules  CMakeLists.txt  README.md
lib/: setup.hpp  somewhere.hpp
run/: batch.cpp  graphic.cpp
